<resources>
    <string name="app_name">Pizza</string>
    <string name="pizzaBaslik">Beef Cheese</string>
    <string name="peynirYazi">Cheese</string>
    <string name="sucukYazi">Sausage</string>
    <string name="zeytinYazi">Olive</string>
    <string name="biberYazi">Pepper</string>
    <string name="teslimatSure">20 min</string>
    <string name="teslimatBaslik">Delivery</string>
    <string name="pizzaAciklama">Meat lover, get ready to meet your pizza !</string>
    <string name="fiyatYazi">$ 5.98</string>
    <string name="buttonYazi">ADD TO CART</string>
    
    <string name="welcome">Welcome</string>
    <string name="paraBirim">USD</string>
    <string name="toplamBakiye">Total Balance</string>
    <string name="kullanici">, Android Bootcamp</string>
    <string name="qr">Qr Transactions</string>
    <string name="paraTransferi">Money Transfer</string>
    <string name="hesaplar">My Accounts</string>
    <string name="sonIslemler">Last Transaction</string>
    <string name="islemleriGor">See All</string>
    <string name="anaSayfa">Home Page</string>
    <string name="gecmisIslemler">History</string>
    <string name="hesap">Account</string>
    <string name="islem1">Shopping Center --> 483,33</string>
    <string name="islem2">Amazon Prime --> 49,99</string>
    <string name="islem3">Coffee --> 129,99</string>
</resources>
    