<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="@color/toolBar"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mobile_banking"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/welcome"
                android:textColor="@color/yaziRenk1"
                android:fontFamily="@font/amiri"
                tools:layout_editor_absoluteY="22dp"
                tools:layout_editor_absoluteX="41dp"
                android:textStyle="bold"
                android:textSize="16sp">

        </TextView>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kullanici"
                android:textColor="@color/yaziRenk1"
                android:fontFamily="@font/amiri"
                tools:layout_editor_absoluteY="22dp"
                tools:layout_editor_absoluteX="100dp"
                android:textStyle="bold" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/zil"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"/>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
            android:layout_width="309dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/balanceBar"
            android:id="@+id/frameLayout">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toplamBakiye"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/toplamBakiye"
                android:textStyle="bold"
                android:fontFamily="@font/oswald_bold"
                android:textSize="20sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paraBirim"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="90dp"
                android:textStyle="bold"
                android:fontFamily="@font/oswald_bold"
                android:textSize="20sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="47,853.55"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="50dp"
                android:textStyle="bold"
                android:fontFamily="@font/oswald_bold"
                android:textSize="20sp" />


    </FrameLayout>

    <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chip5"
            android:text="@string/hesaplar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/chip6"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            android:backgroundTint="@color/chips" />

    <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chip6"
            android:text="@string/paraTransferi"
            app:layout_constraintStart_toEndOf="@+id/chip5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/chip7"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            android:backgroundTint="@color/chips" />

    <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chip7"
            android:text="@string/qr"
            app:layout_constraintStart_toEndOf="@+id/chip6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            android:backgroundTint="@color/chips" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/chip5"
            android:text="@string/sonIslemler"
            android:textSize="20sp"
            android:fontFamily="@font/oswald_bold"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            android:layout_marginEnd="128dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" />

    <TextView
            android:text="@string/islemleriGor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textSize="20dp"
            android:fontFamily="@font/oswald_bold"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/chip7"
            android:layout_marginEnd="42dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
            android:layout_width="323dp"
            android:layout_height="217dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:id="@+id/frameLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
                android:layout_width="288dp"
                android:layout_height="52dp"
                android:id="@+id/chip24"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/islem1" />


        <com.google.android.material.chip.Chip
                android:layout_width="288dp"
                android:layout_height="52dp"
                android:id="@+id/chip25"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="20dp"
                android:text="@string/islem2" />


        <com.google.android.material.chip.Chip
                android:layout_width="288dp"
                android:layout_height="52dp"
                android:id="@+id/chip23"
                android:layout_marginTop="125dp"
                android:layout_marginLeft="20dp"
                android:text="@string/islem3" />
    </FrameLayout>

    <Button
            android:text="@string/anaSayfa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
            android:backgroundTint="@color/button"/>

    <Button
            android:text="@string/gecmisIslemler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
            android:backgroundTint="@color/button"/>

    <Button
            android:text="@string/hesap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
            android:backgroundTint="@color/button"/>


</androidx.constraintlayout.widget.ConstraintLayout>