<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/pizzaAciklama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="22sp"
            android:textColor="@color/yaziRenk2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:textAlignment="center" />

    <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chip2"
            android:textColor="@color/yaziRenk1"
            app:chipStrokeColor="@color/anaRenk"
            app:chipBackgroundColor="@color/anaRenk"
            android:text="@string/sucukYazi"
            app:layout_constraintStart_toEndOf="@+id/chip"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/chip3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chip3"
            android:text="@string/zeytinYazi"
            android:textColor="@color/yaziRenk1"
            app:chipStrokeColor="@color/anaRenk"
            app:chipBackgroundColor="@color/anaRenk"
            app:layout_constraintStart_toEndOf="@+id/chip2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/chip4"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chip4"
            android:text="@string/biberYazi"
            android:textColor="@color/yaziRenk1"
            app:chipStrokeColor="@color/anaRenk"
            app:chipBackgroundColor="@color/anaRenk"
            app:layout_constraintStart_toEndOf="@+id/chip3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="16dp" />

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/anaRenk"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="667dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/yaziRenk1"
                android:textSize="26sp"
                android:layout_gravity="center"
                tools:layout_editor_absoluteY="15dp"
                tools:layout_editor_absoluteX="174dp"
                android:fontFamily="@font/pacifico" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:text="@string/pizzaBaslik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/anaRenk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
            android:text="@string/fiyatYazi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="44sp"
            android:textStyle="bold"
            android:textColor="@color/anaRenk"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pizza_resim"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chip"
            android:text="@string/peynirYazi"
            android:textColor="@color/yaziRenk1"
            app:chipStrokeColor="@color/anaRenk"
            app:chipBackgroundColor="@color/anaRenk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/chip2"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="16dp" />

    <TextView
            android:text="@string/teslimatSure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="22sp"
            android:textColor="@color/yaziRenk2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/chip2" />

    <TextView
            android:text="@string/teslimatBaslik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="22sp"
            android:textColor="@color/anaRenk"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2" />

    <Button
            android:text="@string/buttonYazi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:textSize="18sp"
            android:backgroundTint="@color/anaRenk"
            android:textColor="@color/yaziRenk1"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintBottom_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>